# AIRA-android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/sushi/hardcore/aira/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/sushi/hardcore/aira/: AIRADatabase.kt  ChatActivity.kt  ChatItem.kt  Constants.kt  CreateIdentityFragment.kt  LoginActivity.kt  LoginFragment.kt  MainActivity.kt  ServiceBoundActivity.kt  SettingsActivity.kt
app/src/main/java/sushi/hardcore/aira/adapters/: ChatAdapter.kt  FuckRecyclerView.kt  Session.kt  SessionAdapter.kt
app/src/main/java/sushi/hardcore/aira/background_service/: AIRAService.kt  ApplicationKeys.kt  Contact.kt  FileTransfer.kt  FileTransferNotification.kt  FilesReceiver.kt  FilesSender.kt  FilesTransfer.kt  HandshakeKeys.kt  NotificationBroadcastReceiver.kt  NotificationIdManager.kt  PendingFile.kt  Protocol.kt  ReceiveFile.kt  ReceiveFileTransfer.kt  SendFile.kt  SendFileTransfer.kt  Session.kt  SystemBroadcastReceiver.kt
app/src/main/java/sushi/hardcore/aira/utils/: AvatarPicker.kt  (+3 more)
app/src/main/native/: Cargo.toml  build.sh  check.sh
app/src/main/native/src/: crypto.rs  identity.rs  key_value_table.rs  lib.rs  utils.rs
app/src/main/res/drawable/: background_adapter_bubble.xml  background_session.xml  ic_blur.xml  ic_gitea.xml  ic_launcher.xml  ic_shuttle.xml  offline_warning_background.xml  pending_msg_indicator_background.xml  round_background.xml  sending_pending_msg_indictor_background.xml
app/src/main/res/layout/: activity_chat.xml  activity_login.xml  activity_main.xml  activity_settings.xml  adapter_chat_file.xml  adapter_chat_item.xml  adapter_chat_message.xml  adapter_session.xml  avatar.xml  change_avatar_dialog.xml  dialog_ask_file.xml  dialog_edit_text.xml  dialog_fingerprints.xml  dialog_info.xml  dialog_ip_addresses.xml  dialog_password.xml  file_bubble_content.xml  fragment_create_identity.xml  fragment_login.xml  message_bubble_content.xml  profile_toolbar.xml  text_avatar.xml
app/src/main/res/menu/: chat_activity.xml  main_activity.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-es/: strings-es.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/sushi/hardcore/aira/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
