[package]
name = "aira"
version = "0.0.1"
authors = ["Hardcore Sushi <hardcore.sushi@disroot.org>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
crate-type = ["dylib"]

[dependencies]
rand = "0.8"
rand-7 = {package = "rand", version = "0.7"}
lazy_static = "1.4"
rusqlite = { version = "0.25", features = ["bundled"] }
ed25519-dalek = "1" #for singing
x25519-dalek = "1.1" #for shared secret
sha2 = "0.9"
hkdf = "0.11"
aes-gcm = "0.9" #PSEC
aes-gcm-siv = "0.10" #Database
hmac = "0.11"
hex = "0.4"
strum_macros = "0.21" #display enums
uuid = { version = "0.8", features = ["v4"] }
scrypt = "0.7"
zeroize = "1.4"
log = "0.4"
android_log = "0.1"
