[package]
name = "aira"
version = "0.1.0"
authors = ["Hardcore Sushi <hardcore.sushi@disroot.org>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
crate-type = ["dylib"]

[dependencies]
rand = "0.8"
rand-7 = {package = "rand", version = "0.7"}
lazy_static = "1.4"
rusqlite = { version = "0.27", features = ["bundled"] }
ed25519-dalek = "1" #for singing
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.9" #PSEC
aes-gcm-siv = "0.10" #Database
hmac = "0.12"
hex = "0.4"
strum_macros = "0.24" #display enums
uuid = { version = "1.0", features = ["v4"] }
scrypt = "0.10"
zeroize = "1.3"
log = "0.4"
android_log = "0.1"